KinD/TraefiKind3/traefik/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: ${TRAEFIK_NAMESPACE}
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.0.1
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --entryPoints.web.address=:80
            - --entryPoints.traefik.address=:8888
            - --entryPoints.webhigh.address=:8080
            - --entryPoints.websec.address=:443
            - --entryPoints.webhighsec.address=:8443
            - --entryPoints.web9090.address=:9090

            # Enable tracing
            - --tracing=true
            - --tracing.serviceName=traefik
            - --tracing.otlp=true
            - --tracing.otlp.grpc=true
            - --tracing.otlp.grpc.endpoint=otelcollector:4317
            - --tracing.otlp.grpc.insecure=true
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: websec
              containerPort: 443
              hostPort: 443
            - name: webhigh
              containerPort: 8080
              hostPort: 8080
            - name: websechigh
              containerPort: 8443
              hostPort: 8443
            - name: web9090
              containerPort: 9090
              hostPort: 9090
            - name: dashboard
              containerPort: 8888
              hostPort: 8888
      nodeSelector:
        ingress-ready: "true"
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Equal"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/master"
          operator: "Equal"
          effect: "NoSchedule"
