KinD/TraefiKind3/traefik/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: ${TRAEFIK_NAMESPACE}
spec:
  # We use NodePort instead of LoadBalancer to be able to access externally when using kind
  # see https://kind.sigs.k8s.io/docs/user/ingress
  type: NodePort
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: ${TRAEFIK_NAMESPACE}
spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-websec-service
  namespace: ${TRAEFIK_NAMESPACE}
spec:
  type: NodePort
  ports:
    - targetPort: websec
      port: 443
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web9090-service
  namespace: ${TRAEFIK_NAMESPACE}
spec:
  type: NodePort
  ports:
    - targetPort: web9090
      port: 443
  selector:
    app: traefik
